src/test/ui/issues/issue-19707.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-19707.rs:3:28
   |
LL | type Foo = fn(&u8, &u8) -> &u8;
   |                            ^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from argument 1 or argument 2

error[E0106]: missing lifetime specifier
  --> $DIR/issue-19707.rs:5:27
   |
LL | fn bar<F: Fn(&u8, &u8) -> &u8>(f: &F) {}
   |                           ^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from argument 1 or argument 2

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
